--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "Secrets-massage-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "Ankit Kumar",
   "dependencies": {
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
